--- a/src/custom_background_and_gear_icon/web/css/reviewer-bottom.css
+++ b/src/custom_background_and_gear_icon/web/css/reviewer-bottom.css
@@ -1,31 +1,30 @@
-/* night-mode-specific colours */
 .review-count {
-  color: #0a0;
+  color: var(--review-count);
 }
 
 .new-count {
-  color: #00a;
+  color: var(--new-count);
 }
 
 .learn-count {
-  color: #C35617;
+  color: var(--learn-count);
 }
 
 .zero-count {
-  color: #ddd;
+  color: var(--zero-count);
 }
 
 .nightMode .review-count {
-  color: #5CcC00;
+  color: var(--review-count);
 }
 .nightMode .new-count {
-  color: #77ccff;
+  color: var(--new-count);
 }
 .nightMode .learn-count {
-  color: #FF935B;
+  color: var(--learn-count);
 }
 .nightMode .zero-count {
-  color: #444;
+  color: var(--zero-count);
 }
 
 /* Copyright: Ankitects Pty Ltd and contributors
@@ -79,7 +78,7 @@ button {
 }
 
 #outer {
-  border-top: 1px solid #aaa;
+  border-top: 1px solid var(--border);
 }
 
 #innertable {
@@ -87,17 +86,17 @@ button {
 }
 
 .nightMode #outer {
-  border-top-color: #29292B;
+  border-top-color: var(--faint-border);
 }
 body::before {
 
-    background-image: url("/_addons/zCustomback-gui/user_files/background/AnKing.png"); 
+    background-image: url("/_addons/addon/user_files/background/Milkyway.png"); 
     background-size: cover;  
     background-attachment: fixed!important; 
     background-repeat: no-repeat;
     background-position: bottom;;
     background-color: !important; 
-    opacity: 0.0;
+    opacity: 1;
     content: "";
     top: 0;
     left: 0;
@@ -106,6 +105,6 @@ body::before {
     position: fixed;
     z-index: -99;
     will-change: transform;
-    transform: scale(1.0);
+    transform: scale(1);
     
 }
