--- a/src/custom_background_and_gear_icon/web/css/reviewer.css
+++ b/src/custom_background_and_gear_icon/web/css/reviewer.css
@@ -1,4 +1,3 @@
-/* night-mode-specific colours */
 /* Copyright: Ankitects Pty Ltd and contributors
  * License: GNU AGPL, version 3 or later; http://www.gnu.org/licenses/agpl.html */
 hr {
@@ -11,8 +10,8 @@ body {
 }
 
 body.nightMode {
-  background-color: #2f2f31;
-  color: white;
+  background-color: var(--window-bg);
+  color: var(--text-fg);
 }
 
 img {
@@ -25,7 +24,6 @@ img {
   right: 10px;
   top: 0;
   font-size: 30px;
-  display: none;
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: black;
 }
@@ -35,8 +33,7 @@ img {
   left: 10px;
   top: 0;
   font-size: 30px;
-  color: yellow;
-  display: none;
+  color:#ff0;
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: black;
 }
@@ -89,13 +86,13 @@ img {
 }
 body::before {
 
-    background-image: url("/_addons/zCustomback-gui/user_files/background/AnKing.png"); 
+    background-image: url("/_addons/addon/user_files/background/Milkyway.png"); 
     background-size: cover;  
     background-attachment: fixed!important; 
     background-repeat: no-repeat;
     background-position: center;
     background-color: !important; 
-    opacity: 0.0;
+    opacity: 1;
     content: "";
     top: 0;
     left: 0;
@@ -104,6 +101,6 @@ body::before {
     position: fixed;
     z-index: -99;
     will-change: transform;
-    transform: scale(1.0);
+    transform: scale(1);
     
 }
